--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,44 +33,44 @@
 ------------------------
  */
 
-// Base16-default-dark https://chriskempson.github.io/base16/
-$base00: #181818;
-$base01: #282828;
-$base02: #383838;
-$base03: #585858;
-$base04: #b8b8b8;
-$base05: #d8d8d8;
-$base06: #e8e8e8;
-$base07: #f8f8f8;
-$base08: #ab4642;
-$base09: #dc9656;
-$base0A: #f7ca88;
-$base0B: #a1b56c;
-$base0C: #86c1b9;
-$base0D: #7cafc2;
-$base0E: #ba8baf;
-$base0F: #a16946;
+// Base16-nord https://chriskempson.github.io/base16/
+$base00: #2e3440;
+$base01: #3b4252;
+$base02: #434c5e;
+$base03: #4c566a;
+$base04: #d8dee9;
+$base05: #e5e9f0;
+$base06: #eceff4;
+$base07: #8fbcbb;
+$base08: #bf616a;
+$base09: #d08770;
+$base0A: #ebcb8b;
+$base0B: #a3be8c;
+$base0C: #88c0d0;
+$base0D: #81a1c1;
+$base0E: #b48ead;
+$base0F: #5e81ac;
 
 // Define base and accent colors
 $base-color: $base00;
 $base-color-hover: darken($base-color, 0%);
 
 // Define background colors
-$background: $base07;
+$background: $base04;
 $background-alt: $base06;
 
 // Define border colors
 $border: $base03;
 
 // Define text colors
-$heading: $base08;
+$heading: $base0F;
 $text: $base02;
 
 /*
----------------------
------ 2. Mixins -----
----------------------
- */
+    ---------------------
+    ----- 2. Mixins -----
+    ---------------------
+*/
 
 @mixin transition($duration: 0.5s, $func: ease, $property: all) {
   transition: #{$duration} #{$func} #{$property};
@@ -97,10 +97,10 @@ $text: $base02;
 }
 
 /*
-----------------------------
------ 3. Global Styles -----
-----------------------------
- */
+    ----------------------------
+    ----- 3. Global Styles -----
+    ----------------------------
+*/
 
 body {
   font-family: 'Oswald', sans-serif;
@@ -190,9 +190,9 @@ header {
     padding: 10px;
 
     &:hover {
-      color: $base0A;
+      color: $base04;
       text-decoration: none;
-      background: $base03;
+      background: $base0F;
       border-radius: 4px;
     }
 
@@ -200,11 +200,16 @@ header {
       color: $base00;
       text-decoration: none;
     }
+  }
 
-    &.sticky {
-        position: fixed;
-        z-index: 999;
-    }
+  &.active {
+    display: block;
+  }
+
+  &.sticky {
+    position: fixed;
+    z-index: 999;
+  }
 }
 
 #menu {
@@ -272,7 +277,7 @@ footer {
     height: 35px;
     border-radius: 50%;
     border: 3px solid lighten($text, 25%);
-    text-align:center;
+    text-align: center;
   }
 
   i {
@@ -321,11 +326,11 @@ footer {
 }
 
 .shadow {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .shadow-large {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.08), 0 3px 6px rgba(0,0,0,0.15);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08), 0 3px 6px rgba(0, 0, 0, 0.15);
 }
 
 .heading {
@@ -353,10 +358,10 @@ footer {
 }
 
 /*
---------------------------
------ 4. Lead Styles -----
---------------------------
- */
+    --------------------------
+    ----- 4. Lead Styles -----
+    --------------------------
+*/
 
 #lead {
   position: relative;
@@ -391,19 +396,15 @@ footer {
   }
 
   h2 {
-    color: $base09;
+    color: $base0F;
     font-weight: 500;
     font-size: 2.25em;
     margin-bottom: 15px;
   }
 
   h3 {
-    color: #fff;
-    font-weight: 300;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1em;
-    margin-bottom: 15px;
-  }
+    color: $base04;
+}
 }
 
 #lead-overlay {
@@ -436,13 +437,13 @@ footer {
     height: 35px;
     border-radius: 50%;
     border: 3px solid lighten($base-color, 25%);
-    text-align:center;
+    text-align: center;
   }
 
   i {
     animation: pulsate 1.5s ease;
     animation-iteration-count: infinite;
-    padding-top: 5px;;
+    padding-top: 5px;
   }
 }
 
@@ -461,10 +462,10 @@ footer {
 }
 
 /*
----------------------------
------ 5. About Styles -----
----------------------------
- */
+    ---------------------------
+    ----- 5. About Styles -----
+    ---------------------------
+*/
 
 #about {
   padding: 75px 15px;
@@ -481,10 +482,10 @@ footer {
 }
 
 /*
---------------------------------
------ 6. Experience Styles -----
---------------------------------
- */
+    --------------------------------
+    ----- 6. Experience Styles -----
+    --------------------------------
+*/
 
 #experience {
   padding: 50px 15px;
@@ -503,7 +504,7 @@ footer {
 
   &:before {
     position: absolute;
-    content: '';
+    content: "";
     top: 0;
     bottom: 0;
     left: 303px;
@@ -592,10 +593,10 @@ footer {
 }
 
 /*
--------------------------------
------ 7. Education Styles -----
--------------------------------
- */
+    -------------------------------
+    ----- 7. Education Styles -----
+    -------------------------------
+*/
 
 #education {
   padding: 50px 15px 20px 15px;
@@ -646,10 +647,10 @@ footer {
 }
 
 /*
--------------------------------
------ 8. Project Styles -----
--------------------------------
- */
+    -------------------------------
+    ----- 8. Project Styles -----
+    -------------------------------
+*/
 
 #projects {
   padding: 50px 15px;
@@ -697,23 +698,23 @@ footer {
 }
 
 .no-image {
-    .project-info {
-        position: relative;
-        margin: 0;
-        padding: 30px 15px;
-        transform: none;
-    }
+  .project-info {
+    position: relative;
+    margin: 0;
+    padding: 30px 15px;
+    transform: none;
+  }
 }
 
 #more-projects {
-    display: none;
+  display: none;
 }
 
 /*
--------------------------------
------ 9. Skills Styles -----
--------------------------------
- */
+    -------------------------------
+    ----- 9. Skills Styles -----
+    -------------------------------
+*/
 
 #skills {
   padding: 50px 15px;
@@ -744,10 +745,10 @@ footer {
 }
 
 /*
--------------------------------
------ 10. Contact Styles -----
--------------------------------
- */
+    -------------------------------
+    ----- 10. Contact Styles -----
+    -------------------------------
+*/
 
 #contact {
   padding: 50px 15px;
@@ -793,17 +794,17 @@ footer {
   button {
     display: block;
     width: 100%;
-    background: #fff;
+    background: $base0B;
     border-radius: 4px;
     padding: 5px 10px;
     border: none;
-    color: $base-color;
+    color: $base00;
     font-weight: 700;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     @include transition();
 
     &:hover {
-      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     }
   }
 }
@@ -815,45 +816,46 @@ footer {
 */
 
 .optional-section {
-    padding: 50px 15px;
-    text-align: center;
-    border-top: 1px solid $border;
+  padding: 50px 15px;
+  text-align: center;
+  border-top: 1px solid $border;
 
-    h2 {
-        color: $heading;
-    }
+  h2 {
+    color: $heading;
+  }
 }
 
 .optional-section-block {
-    max-width: 700px;
-    margin: 0 auto 30px auto;
-    padding: 15px;
-    border: 1px solid $border;
-    background: #fff;
-    text-align: left;
+  max-width: 700px;
+  margin: 0 auto 30px auto;
+  padding: 15px;
+  border: 1px solid $border;
+  background: #fff;
+  text-align: left;
 
-    h3 {
-        font-weight: 500;
-        margin: 0 0 15px 0;
-        color: $heading;
-    }
+  h3 {
+    font-weight: 500;
+    margin: 0 0 15px 0;
+    color: $heading;
+  }
 
-    h4 {
-        color: $text;
-        clear: both;
-        font-weight: 500;
-        margin: 0 0 15px 0;
-    }
+  h4 {
+    color: $text;
+    clear: both;
+    font-weight: 500;
+    margin: 0 0 15px 0;
+  }
 
-    p, ul {
-        margin: 0 0 15px 0;
-        color: $text;
-        font-size: 0.9em;
-    }
+  p,
+  ul {
+    margin: 0 0 15px 0;
+    color: $text;
+    font-size: 0.9em;
+  }
 
-    ul {
-        padding: 0 0 0 15px;
-    }
+  ul {
+    padding: 0 0 0 15px;
+  }
 }
 
 /*
@@ -864,12 +866,10 @@ footer {
 
 // Collapse timeline
 @media only screen and (max-width: 750px) {
-
   #experience-timeline {
     &:before, &:after {
       left: 23px;
     }
-
   }
 
   .vtimeline-date {
@@ -888,12 +888,10 @@ footer {
   .vtimeline-content {
     margin-left: 70px;
   }
-
 }
 
 // Medium Devices
-@media only screen and (max-width : 992px) {
-
+@media only screen and (max-width: 992px) {
   #lead {
     height: auto;
     min-height: auto;
@@ -914,10 +912,6 @@ footer {
     h2 {
       font-size: 1.75em;
     }
-
-    h3 {
-      font-size: 1.25em;
-    }
   }
 
   #about {
@@ -927,12 +921,10 @@ footer {
       text-align: left;
     }
   }
-
 }
 
 // Small Devices
-@media only screen and (max-width : 768px) {
-
+@media only screen and (max-width: 768px) {
   header {
     position: fixed;
     display: none;
@@ -968,16 +960,8 @@ footer {
       font-size: 1.3em;
     }
 
-    h3 {
-      font-size: 1em;
-    }
-
-    .project-info {
-        position: relative;
-        margin: 0;
-        padding: 30px 15px;
-        top: auto;
-        transform: none;
+    a {
+      padding: 10px 20px;
     }
   }
 
@@ -998,6 +982,7 @@ footer {
   .project-info {
     position: relative;
     margin: 0;
+    padding: 30px 15px;
     top: auto;
     transform: none;
   }
@@ -1009,12 +994,10 @@ footer {
   .social {
     text-align: center;
   }
-
 }
 
 // Extra Small Devices
-@media only screen and (max-width : 480px) {
-
+@media only screen and (max-width: 480px) {
   #lead-content {
     h1 {
       font-size: 1.5em;
@@ -1024,14 +1007,9 @@ footer {
       font-size: 1em;
     }
 
-    h3 {
-      font-size: 0.8em;
-    }
-
     a {
       font-size: 0.9em;
       padding: 5px 10px;
     }
   }
-
 }
